--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=3001
 CONNECTION_URL = mongodb+srv://arun11kb:DBfgYujCX5BnEPsS@cluster0.dywtqfc.mongodb.net/?retryWrites=true&w=majority
+SECRECT_KEY=test
