--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.2",
     "socket.io": "^4.7.1",
+    "socketio-jwt": "^4.6.2",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
